--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta name="viewport"
 	content="width=device-width, initial-scale=1.0">
 	<title>Image Editor</title>
-
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" type="image/jpg" href="img/favicon.jpg">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
 	<div class="content-inicio">
 		
 		<img src="img/imageeditor.png" class="inicio">
-		<div class="divbtn"><a href="imageeditor.html" class="btn">Begin</a></div>
+		<div class="divbtn"><a href="imageeditor.html" class="btn" role="button">Begin</a></div>
 
 	</div>
 
