--- a/imageeditor.html
+++ b/imageeditor.html
@@ -4,8 +4,8 @@
 	<meta name="viewport"
 	content="width=device-width, initial-scale=1.0">
 	<title>Image Editor</title>
-
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" type="image/jpg" href="img/favicon.jpg">
 
 </head>
 <body>
